[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Guard.gd" type="Script" id=1]
[ext_resource path="res://Assets/Guard.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="Guard" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
speed = 50
vis_rad = 50

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="LineofSight" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LineofSight" index="0"]

[connection signal="body_entered" from="." to="." method="_on_Guard_body_entered"]

[connection signal="body_entered" from="LineofSight" to="." method="_on_LineofSight_body_entered"]

[connection signal="body_exited" from="LineofSight" to="." method="_on_LineofSight_body_exited"]


